hphp/hack/test/typecheck/expression_trees/splice_err2.php.exp
File "splice_err2.php", line 9, characters 17-21:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 206, characters 35-44:
  Expected `ExampleInt`
  File "expr_tree.hhi", line 29, characters 40-52:
  But got `ExampleString`
